# chaos

./: .gitignore  2d_delay_embedding_analyses.py  Aa_load_data.py  Ab_plot_signals.py  Ac_find_e_tau.py  autocorr.py  build_ccm.py  build_kdem.py  ccm-long-24000-E6-tau4-tp6.csv  ccm-long-24000-optimal-E&tau-parallel.csv  find_clusters_ccm.py  find_clusters_kedm_ccm.py  find_e_tau_landscape.py  kdme_code_leoni.py  kedm-xmap-24000-Emax36-tau4-tp6.npy  openh5.py  plot_ccm.py  plot_kedm_ccm.py  plot_kedm_xmap.py  plot_signals.py  pyproject.toml  smap.py  smap_coefficients_vel1_24000_tau4_Tp6.csv  smap_predictions_vel1_24000_tau4_Tp6.csv  smap_predictions_vel3_24000_tau4_Tp6.csv  smap_singular_values_vel1_24000_tau4_Tp12.csv  smap_singular_values_vel3_24000_tau4_Tp12.csv  smap_singular_values_vel3_24000_tau4_Tp6.csv  sollewitt.py  test.py  univariate.ipynb
processed_data/: bestE&tau-24000-Emax12-tau_min2-tau_max21.csv  e_tau_landscape_4000_Emax12_taumax18.csv  kedm-bestE-24000-Emax36-tau4-tp6.csv  kedm-ccm-long-24000-E6-tau4-tp6.csv  smap_coefficients_vel1.csv  smap_coefficients_vel1_24000_tau4_Tp12.csv  smap_coefficients_vel3_24000_tau4_Tp12.csv  smap_coefficients_vel3_24000_tau4_Tp6.csv  smap_predictions_vel1.csv  smap_predictions_vel1_24000_tau4_Tp12.csv  smap_predictions_vel3_24000_tau4_Tp12.csv  smap_singular_values_vel1.csv  smap_singular_values_vel1_24000_tau4_Tp6.csv
