[project]
name = "chaoslectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.30.1",
    "kedm>=0.9.2",
    "numpy>=2.3.2",
    "pyedm>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
